[package]
name = "apodviewer-server"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.9.0", features = ["web-axum"] }
axum = "0.6.4"
sync_wrapper = "0.1.1"
axum-extra = { version = "0.4.2", features = ["spa"] }
shuttle-static-folder = "0.9.0"
