[package]
name = "apodviewer-server"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
axum = "0.6.4"
axum-extra = { version = "0.4.2", features = ["spa"] }
shuttle-service = { version = "0.11.0", features = ["web-axum"] }
shuttle-static-folder = "0.11.3"
sync_wrapper = "0.1.1"
